# frappe-strict-session-defaults

./: MANIFEST.in  README.md  pyproject.toml  setup.py
strict_session_defaults/: __init__.py  hooks.py  modules.txt  override.py  setup.py
strict_session_defaults/config/: desktop.py  docs.py
strict_session_defaults/public/: build.json
strict_session_defaults/public/js/: strict_session_defaults.bundle.js  strict_session_defaults.js
strict_session_defaults/strict_session_defaults/doctype/strict_session_defaults_has_role/: strict_session_defaults_has_role.json  strict_session_defaults_has_role.py
strict_session_defaults/strict_session_defaults/doctype/strict_session_defaults_has_user/: strict_session_defaults_has_user.json  strict_session_defaults_has_user.py
strict_session_defaults/strict_session_defaults/doctype/strict_session_defaults_log/: __init__.py  strict_session_defaults_log.js  strict_session_defaults_log.json  strict_session_defaults_log.py
strict_session_defaults/strict_session_defaults/doctype/strict_session_defaults_settings/: strict_session_defaults_settings.js  strict_session_defaults_settings.json  strict_session_defaults_settings.py
